--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -22,3 +22,68 @@
     margin-top: 40px;
     color: white;
 }
+
+input{
+    border-radius: 22px;
+    min-width: 250px;
+    margin-right: 12px;
+    width: 85%;
+    border: 1px solid #999999;   
+    background: transparent; 
+    font-size: 18px;
+    padding: 10px;
+}
+
+button{
+    border-radius: 22px;
+    
+    border: 1px solid #999999;   
+    background: #2D333B; 
+    color: #FFFFFF;
+    font-size: 18px;
+    padding: 10px;
+
+}
+
+.perfil{
+    display: flex;
+    margin: 40px 0;
+
+}
+
+.profile{
+   width: 120px;
+   height:120px;
+   border-radius: 60px;
+   border: 2px solid #E5E5E5;
+   margin-right: 32px;
+
+}
+
+.perfil h3{
+    color: #999999;
+    font-size: 24px;
+    margin: 0;
+
+}
+
+
+.perfil span{
+    display: block;
+    color: #999999;
+    font-size: 12px;
+    margin: 0;
+}
+
+.perfil p{
+    color: #999999;
+    font-size: 12px;
+    margin: 20px 0 0 0 ;
+}
+
+.repositorio{
+    font-size: 32px;
+    color: #FFFFFF;
+    margin: 12px 0;
+    text-align: center;
+}
